# lite-xl-plugin-manager

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  SPEC.md  build.sh  flake.nix  lite-xl-plugin-manager.json  lpm.c  lpm.json  lpm.lua  manifest.json  meson.build  meson_options.txt
.github/workflows/: build.yml  release.yml
lib/microtar/: LICENSE  README.md
lib/microtar/src/: microtar.c  microtar.h
libraries/: json.c  json.lua
plugins/: plugin_manager.lua  welcome.lua
plugins/plugin_manager/: init.lua  plugin_view.lua
src/: lpm.c  lpm.lua
t/: run.lua
