option('static', type : 'boolean', value : false, description: 'Build the pre-packaged lua file into the executable.')
option('install_plugin', type : 'boolean', value : false, description: 'Install the Lite-XL plugin for lpm')
option('lite_datadir', type : 'string', value : '', description: 'Path to the Lite-XL data directory, usually \'share/lite-xl\'')
